--- a/style.css
+++ b/style.css
@@ -4,34 +4,23 @@ body {
 }
 header {
     text-align: center;
-}.profile {
+}
+.profile {
     width : 150px;
 }
 h1.profile-name {
     margin-top: 5px;
     font-size: 36px;
 }
-nav {
-    align-items: center;
-}
 nav ul {
-    list-style-type: none;
-    margin: 0;
     padding: 0;
     overflow: hidden;
-    position: relative;
 
   }
 
 nav li {
     display: inline-block;
-    padding: 0;
-    margin: 0;
-    position: relative;
-    zoom: 1;
-    vertical-align: middle;
-    position: relative;
-    list-style: none;
+
 }
 
 nav a {
@@ -43,15 +32,11 @@ nav a {
 
 }
 a {
-    #258cdb;
+    color: #258cdb;
 }
 
 a:hover {
     color: #2571db;
-    outline: 0;
-}
-a:active {
-    outline: 0;
 }
 
 
