--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
 body {
-    padding: 20px;
+    margin-bottom: 0;
+    padding: 20px 20px 20px;
+    padding-bottom: 0;
     font-size: 16px;
     font-family: 'Lato', sans-serif;
+    max-width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+
 }
 header {
     text-align: center;
+    
 }
 
 .profile {
@@ -14,7 +21,17 @@ h1.profile-name {
     margin-top: 5px;
     font-size: 36px;
 }
+nav{
+    max-width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    color: #fff;
+    margin-top: 0;
+    margin-bottom: 0;
+}
 nav ul {
+    margin-top: 0;
     padding: 0;
     overflow: hidden;
     white-space: nowrap;
@@ -26,26 +43,29 @@ h1 {
 }
 nav li {
     display: inline-block;
+    padding: 5px;
 
 }
 
 nav a {
-    text-decoration: none;
     padding: .5em 1em;
     color: #777;
     white-space: nowrap;
     background-color: transparent;
 
 }
+
+
+
 a {
     color: #258cdb;
     text-decoration: none;
 }
 
-a:hover {
+nav a:hover {
     color: #2571db;
+    background-color: #ededed;
 }
-
 
 .content {
     max-width: 700px;
@@ -59,13 +79,15 @@ footer{
     margin-right: auto;
     text-align: center;
     color: #fff;
-    padding: 5px;
-    background-color: black;
+    margin-top: 0;
+    margin-bottom: 0;
+    background-color: #ededed;
 }
 
 
 
 footer ul {
+    margin: 0;
     padding: 0;
     overflow: hidden;
     white-space: nowrap;
@@ -74,10 +96,22 @@ footer ul {
 
 footer  li {
     display: inline-block;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 footer a {
     text-decoration: none;
-    padding: .5em 1em;
-    color: white;
+    padding: .5em 1em;;
+    
+    color: black;
+}
+
+p {
+    text-align: justify;
+}
+
+footer a:hover {
+    color: #2571db;
+    background-color: white;
 }
