--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body {
     margin-bottom: 0;
-    padding: 20px 20px 20px;
     padding-bottom: 0;
     font-size: 16px;
     font-family: 'Lato', sans-serif;
@@ -68,6 +67,7 @@ nav a:hover {
 }
 
 .content {
+    padding: 20px;
     max-width: 700px;
     margin-left: auto;
     margin-right: auto;
@@ -96,8 +96,8 @@ footer ul {
 
 footer  li {
     display: inline-block;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 footer a {
