--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@ body {
 }
 header {
     text-align: center;
-    padding: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
     
 }
 
@@ -68,7 +69,8 @@ nav a:hover {
 }
 
 .content {
-    padding: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
     max-width: 700px;
     margin-left: auto;
     margin-right: auto;
