modified navbar and footer

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ nav li {
 }
 
 nav a {
-    padding: .5em 1em;
+    padding: .5em;
     color: #777;
     white-space: nowrap;
     background-color: transparent;
